@startuml

title __CAMERA's Class Diagram__\n

  namespace com.example.safedrive {
    namespace activities {
      namespace driveralert {
        namespace ui.camera {
          class com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview {
              {static} - TAG : String
              - mCameraSource : CameraSource
              - mContext : Context
              - mStartRequested : boolean
              - mSurfaceAvailable : boolean
              - mSurfaceView : SurfaceView
              + CameraSourcePreview()
              + release()
              + start()
              + start()
              + stop()
              # onLayout()
              - isPortraitMode()
              - startIfReady()
          }
        }
      }
    }
  }
  

  namespace com.example.safedrive {
    namespace activities {
      namespace driveralert {
        namespace ui.camera {
          class com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview.SurfaceCallback {
              + surfaceChanged()
              + surfaceCreated()
              + surfaceDestroyed()
          }
        }
      }
    }
  }
  

  namespace com.example.safedrive {
    namespace activities {
      namespace driveralert {
        namespace ui.camera {
          class com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay {
              - mFacing : int
              - mGraphics : Set<Graphic>
              - mHeightScaleFactor : float
              - mLock : Object
              - mPreviewHeight : int
              - mPreviewWidth : int
              - mWidthScaleFactor : float
              + GraphicOverlay()
              + add()
              + clear()
              + remove()
              + setCameraInfo()
              # onDraw()
          }
        }
      }
    }
  }
  

  namespace com.example.safedrive {
    namespace activities {
      namespace driveralert {
        namespace ui.camera {
          abstract class com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay.Graphic {
              + Graphic()
              {abstract} + draw()
              + postInvalidate()
              + scaleX()
              + scaleY()
              + translateX()
              + translateY()
          }
        }
      }
    }
  }
  

  com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview -up-|> android.view.ViewGroup
  com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview o-- com.example.safedrive.activities.driveralert.GraphicOverlay : mOverlay
  com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview +-down- com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview.SurfaceCallback
  com.example.safedrive.activities.driveralert.ui.camera.CameraSourcePreview.SurfaceCallback .up.|> android.view.SurfaceHolder.Callback
  com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay -up-|> android.view.View
  com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay +-down- com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay.Graphic
  com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay.Graphic o-- com.example.safedrive.activities.driveralert.ui.camera.GraphicOverlay : mOverlay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
